--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@prisma/client": "^6.13.0",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "prisma": "^6.13.0",
     "tailwindcss": "^4"
   }
 }
