--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.13.0",
+    "@tiptap/extension-image": "^3.3.0",
+    "@tiptap/extension-text-align": "^3.3.0",
+    "@tiptap/react": "^3.3.0",
+    "@tiptap/starter-kit": "^3.3.0",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.13.0",
